--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">ISBN scanner</string>
     <string name="action_settings">Settings</string>
+    <string name="inital_display">Point the camera view to a QR Code to read the information</string>
+    <string name="check_display">Looking up ISBN : </string>
 </resources>
