--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="action_settings">Settings</string>
     <string name="inital_display">Point the camera view to a QR Code to read the information</string>
     <string name="check_display">Looking up ISBN : </string>
-    <string name="title_activity_view_results">ViewResultsActivity</string>
+    <string name="title_activity_view_results">Book Report</string>
+    <string name="btnResults_default">Could not set marked status</string>
 </resources>
